files-blog-4winds/service-blog-4winds.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/openshift-instruqt/blog-django-py'
    openshift.io/generated-by: OpenShiftWebConsole
  selfLink: /api/v1/namespaces/4winds-grupo-22-fiap-fase4/services/blog-4winds
  resourceVersion: '48637327'
  name: blog-4winds
  uid: 61076ef0-b803-4f58-813b-622ecf12d43a
  creationTimestamp: '2022-03-24T12:02:02Z'
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2022-04-01T20:50:05Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:app.openshift.io/vcs-ref': {}
            'f:app.openshift.io/vcs-uri': {}
            'f:openshift.io/generated-by': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":8080,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:app': {}
            'f:deploymentconfig': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: 4winds-grupo-22-fiap-fase4
  labels:
    app: blog-4winds
    app.kubernetes.io/component: blog-4winds
    app.kubernetes.io/instance: blog-4winds
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: blog-4winds
    deploymentconfig: blog-4winds
  clusterIP: 172.30.77.203
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
