files-blog-4winds/service-sample-database.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: 'postgres://{.spec.clusterIP}:{.spec.ports[?(.name=="postgresql")].port}'
  selfLink: /api/v1/namespaces/4winds-grupo-22-fiap-fase4/services/sample-database
  resourceVersion: '37038825'
  name: sample-database
  uid: e8d8226a-fbba-4780-906b-d05ba48db042
  creationTimestamp: '2022-03-24T12:04:58Z'
  managedFields:
    - manager: oc
      operation: Update
      apiVersion: v1
      time: '2022-03-24T12:04:58Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:openshift.io/generated-by': {}
            'f:template.openshift.io/expose-uri': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:template': {}
        'f:spec':
          'f:ports':
            .: {}
            'k:{"port":5432,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector':
            .: {}
            'f:name': {}
          'f:sessionAffinity': {}
          'f:type': {}
  namespace: 4winds-grupo-22-fiap-fase4
  labels:
    app: sample-database
    app.kubernetes.io/component: sample-database
    app.kubernetes.io/instance: sample-database
    template: postgresql-persistent-template
spec:
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    name: sample-database
  clusterIP: 172.30.97.148
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
