files-blog-4winds/route-blog-4winds.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: blog-4winds
  namespace: 4winds-grupo-22-fiap-fase4
  selfLink: >-
    /apis/route.openshift.io/v1/namespaces/4winds-grupo-22-fiap-fase4/routes/blog-4winds
  uid: 6cf9e599-a60b-4b30-962b-2f1d7224f692
  resourceVersion: '48637328'
  creationTimestamp: '2022-03-24T12:02:02Z'
  labels:
    app: blog-4winds
    app.kubernetes.io/component: blog-4winds
    app.kubernetes.io/instance: blog-4winds
    app.kubernetes.io/name: python
    app.kubernetes.io/part-of: blog-django-py-app
    app.openshift.io/runtime: python
    app.openshift.io/runtime-version: 3.8-ubi7
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-03-24T12:02:03Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2022-04-01T20:50:05Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/component': {}
            'f:app.kubernetes.io/instance': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/part-of': {}
            'f:app.openshift.io/runtime': {}
            'f:app.openshift.io/runtime-version': {}
        'f:spec':
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  host: blog-4winds-4winds-grupo-22-fiap-fase4.apps.na46.prod.nextcle.com
  to:
    kind: Service
    name: blog-4winds
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
status:
  ingress:
    - host: blog-4winds-4winds-grupo-22-fiap-fase4.apps.na46.prod.nextcle.com
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2022-03-24T12:02:03Z'
      wildcardPolicy: None
      routerCanonicalHostname: apps.na46.prod.nextcle.com
